@@ -10,14 +10,13 @@
 ################################################################################
 
 function _it_github_protocol {
-
-  if ! _it_std_check_command "git" ; then
-    return $FALSE
-  fi
-    
   case "$1" in
   
     on|https)
+      # Vérifie que git est installé
+      if ! _it_std_check_command "git" ; then
+        return $FALSE
+      fi
       if _it_std_checkAction "github" $TRUE ; then
         git config --global url."https://github.com/".insteadOf git@github.com:
         git config --global credential.helper 'cache --timeout=3600'        
@@ -26,6 +25,10 @@ function _it_github_protocol {
     ;;
     
     off|ssh)
+      # Vérifie que git est installé
+      if ! _it_std_check_command "git" ; then
+        return $FALSE
+      fi
       if _it_std_checkAction "github" $FALSE ; then
         git config --global --remove-section url."https://github.com/"
         git config --global --remove-section credential
